# pimpmyrice

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  flake.nix  pyproject.toml  setup.py
.github/workflows/: push.yaml  release.yaml  test.yaml
packaging/: pyinstaller.spec
packaging/aur/: PKGBUILD.template  generate_pkgbuild.sh
packaging/copr/: build_rpm.sh  publish_copr.sh  spec.template
packaging/nixpkgs/: default.nix  result
packaging/ppa/: build_deb.sh  publish_ppa.sh
packaging/ppa/debian/: README.Debian  control  rules
packaging/windows/: inno_setup.iss  installer.iss
src/pimpmyrice/: __main__.py  args.py  cli.py  color_extract.py  color_gen.py  colors.py  completions.py  config_paths.py  dark_generator.py  doc.py  edit_args.py  events.py  exceptions.py  files.py  light_generator.py  logger.py  migrations.py  module.py  module_utils.py  parsers.py  schemas.py  template.py  theme.py  theme_utils.py  utils.py
src/pimpmyrice/assets/: default_base_style.json
src/pimpmyrice/migrations/: __init__.py  module_migrations.py  theme_migrations.py
src/pimpmyrice/palette_generators/: dark.py  light.py
tests/: test_theme.py
