[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "F401",
    "F841",
    "F821",
    "ARG001",
    "ARG002",
    "ARG003",
    "ARG004",
    "ARG005",
]
ignore = [
    "E741"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true

[tool.isort]
profile = "black"
